no-jira: fix missing labels, remove unused panel in file dialog
Test waited exception in CSV import for QTI 2.1, disable LDAP for
selenium tests...